# ganymede

./: .gitignore  CMakeLists.txt  NOTES.txt  PSEUDO.txt  README.md  TODO.txt
include/: DBusServer.h  Ganymede.h  SplitManager.h  Types.h  WindowController.h  WindowManager.h
src/: DBusServer.cc  Ganymede.cc  SplitManager.cc  WindowController.cc  WindowManager.cc  main.cc
